maze.lessons.maze.pledge.PledgeMaze.scala.error
Escaper:41: error: expected class or object definition
def isDirectionFree() {
^Escaper:52: error: Unmatched closing brace '}' ignored here
}
^